# rosstart

src/rosstart/: CMakeLists.txt  package.xml
src/rosstart/include/rosstart/: SimplePublisher.hpp  SimpleSubscriber.hpp
src/rosstart/launch/: rosstart.launch
src/rosstart/lib/: SimplePublisher.cpp  SimpleSubscriber.cpp
src/rosstart/msg/: mystr.msg
src/rosstart/src/: main.cpp  simplepub.cpp
